--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Videos from: https://mixkit.co/-->
       <p id="text"></p>
 
       <div id="pointer-bg" class="pointer-container">
-        <span id="pointer-dot"></span>
+        <span id="pointer-dot" class="pointer"></span>
       </div>
 
       <div class="gradient-circle"></div>
