--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ Videos from: https://mixkit.co/-->
   <body>
     <h1 id="title">Meditation</h1>
     <video autoplay muted loop id="video-bg">
-      <source src="images/water.mp4" type="video/mp4" />
+      <source
+        src="https://ferolobucket.s3.amazonaws.com/water.mp4"
+        type="video/mp4"
+      />
       Your browser does not support HTML5 video.
     </video>
 
