--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Relaxer</title>
+    <title>Relax-App</title>
   </head>
 
   <!--Music from: https://www.bensound.com & https://mixkit.co/
-Videos from: https://mixkit.co/-->
+Videos from: https://mixkit.co/
+Images from: https://unsplash.com/-->
 
-  <body>
+  <body id="body">
     <h1 id="title">Meditation</h1>
     <video autoplay muted loop id="video-bg">
       <source
