--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Relax-App</title>
+    <title>Meditation-App</title>
   </head>
 
   <!--Music from: https://www.bensound.com & https://mixkit.co/
@@ -19,10 +19,7 @@ Images from: https://unsplash.com/-->
   <body id="body">
     <h1 id="title">Meditation</h1>
     <video autoplay muted loop id="video-bg">
-      <source
-        src="https://ferolobucket.s3.amazonaws.com/water.mp4"
-        type="video/mp4"
-      />
+      <source src="images/water.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
 
