--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </head>
 
   <!--Music from: https://www.bensound.com & https://mixkit.co/
-Videos from: https://mixkit.co/
-Images from: https://unsplash.com/-->
+Videos from: https://mixkit.co/-->
 
   <body id="body">
     <h1 id="title">Meditation</h1>
