--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Meditation-App</title>
-  </head>
 
-  <!--Music from: https://www.bensound.com & https://mixkit.co/
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Meditation-App</title>
+</head>
+
+<!--Music from: https://www.bensound.com & https://mixkit.co/
 Videos from: https://mixkit.co/-->
 
-  <body id="body">
-    <h1 id="title">Meditation</h1>
-    <video autoplay muted loop id="video-bg">
-      <source src="images/water.mp4" type="video/mp4" />
-      Your browser does not support HTML5 video.
-    </video>
+<body id="body">
+  <h1 id="title">Meditation</h1>
+  <video autoplay muted loop id="video-bg">
+    <source src="images/water.mp4" type="video/mp4" />
+    Your browser does not support HTML5 video.
+  </video>
 
-    <div class="music-container" id="music-container">
-      <audio src="music/betterdays.mp3" id="audio"></audio>
+  <div class="music-container" id="music-container">
+    <audio src="music/betterdays.mp3" id="audio"></audio>
 
-      <div class="navigation">
-        <button id="prev" class="action-btn">
-          <i class="fas fa-backward"></i>
-        </button>
-        <button id="play" class="action-btn action-btn-big">
-          <i class="fas fa-play"></i>
-        </button>
-        <button id="next" class="action-btn">
-          <i class="fas fa-forward"></i>
-        </button>
-      </div>
+    <div class="navigation">
+      <button id="play" class="action-btn action-btn-big">
+        <i class="fas fa-play"></i>
+      </button>
+      <select class="select-css">
+        <option value="clock">Time</option>
+        <option>5 min</option>
+        <option>10 min</option>
+      </select>
+
+    </div>
+  </div>
+
+  <div class="container" id="container">
+    <div class="circle"></div>
+    <h1 id="countdown"></h1>
+    <p id="text"></p>
+
+    <div id="pointer-bg" class="pointer-container">
+      <span id="pointer-dot" class="pointer"></span>
     </div>
 
-    <div class="container" id="container">
-      <div class="circle"></div>
-      <h1 id="countdown"></h1>
-      <p id="text"></p>
+    <div class="gradient-circle"></div>
+  </div>
 
-      <div id="pointer-bg" class="pointer-container">
-        <span id="pointer-dot" class="pointer"></span>
-      </div>
+  <script src="index.js"></script>
+</body>
 
-      <div class="gradient-circle"></div>
-    </div>
-
-    <script src="index.js"></script>
-  </body>
 </html>
