--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@ Videos from: https://mixkit.co/-->
       <button id="play" class="action-btn action-btn-big">
         <i class="fas fa-play"></i>
       </button>
-      <select class="select-css">
-        <option value="clock">Time</option>
-        <option>5 min</option>
-        <option>10 min</option>
+      <select class="select-css id=" setTimer" <option selected disabled>Time</option>
+        <option value="5">5 min</option>
+        <option value="10">10 min</option>
       </select>
-
     </div>
+    <div id="countdownTime"></div>
   </div>
 
   <div class="container" id="container">
