--- a/index.html
+++ b/index.html
@@ -35,13 +35,22 @@ Videos from: https://mixkit.co/-->
       </button>
       <select class="select-css" id="select-time">
         <option value="time" disabled selected>Time</option>
-        <option value="1">5 min</option>
-        <option value="10">10 min</option>
-        <option value="15">15 min</option>
-        <option value="20">20 min</option>
+        <option value="4">5 min</option>
+        <option value="9">10 min</option>
+        <option value="14">15 min</option>
+        <option value="19">20 min</option>
       </select>
     </div>
     <div id="countdownTime"></div>
+  </div>
+
+  <div class="modal">
+    <div class="modal-content">
+      <span class="close-button">×</span>
+      <h4>⏱️ Time is up.</h4>
+      <h2 id="quote"></h2>
+      <p id="author"></p>
+    </div>
   </div>
 
   <div class="container" id="container">
