--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <title>Meditapp</title>
 </head>
 
-<!--Music from: https://www.bensound.com & https://mixkit.co/
-Videos from: https://mixkit.co/-->
+<!--Music from: https://www.bensound.com & https://mixkit.co/-->
+<!--Videos from: https://mixkit.co/-->
+<!--Mini-project from the Brad Traversy course "20+ Web Projects With Vanilla JavaScript" on Udemy.-->
 
 <body id="body">
   <h1 id="title">Meditation</h1>
