--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!--Music from: https://www.bensound.com & https://mixkit.co/-->
 <!--Videos from: https://mixkit.co/-->
-<!--Mini-project from the Brad Traversy course "20+ Web Projects With Vanilla JavaScript" on Udemy.-->
+<!--My Portfolio: http://fernanda-romero.netlify.app/.-->
 
 <body id="body">
   <h1 id="title">Meditation</h1>
