--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body id="body">
   <h1 id="title">Meditation</h1>
-  <video autoplay muted loop id="video-bg">
+  <video autoplay muted loop playsinline id="video-bg">
     <source src="images/water.mp4" type="video/mp4" />
     Your browser does not support HTML5 video.
   </video>
