--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body id="body">
   <h1 id="title">Meditation</h1>
   <video autoplay muted loop playsinline id="video-bg">
-    <source src="images/water.mp4" type="video/mp4" />
+    <source src="images/sun.mp4" type="video/mp4" />
     Your browser does not support HTML5 video.
   </video>
 
   <div class="music-container" id="music-container">
-    <audio src="music/slowmotion.mp3" id="audio"></audio>
+    <audio src="music/BreatheDeep.mp3" id="audio"></audio>
 
     <div class="navigation">
       <button id="prev" class="action-btn">
@@ -36,10 +36,10 @@
       </button>
       <select class="select-css" id="select-time">
         <option value="time" disabled selected>Time</option>
+        <option value="2">3 min</option>
         <option value="4">5 min</option>
+        <option value="6">7 min</option>
         <option value="9">10 min</option>
-        <option value="14">15 min</option>
-        <option value="19">20 min</option>
       </select>
     </div>
     <div id="countdownTime"></div>
